fix floating masthead text on small displays

--- a/app/assets/stylesheets/masthead.css
+++ b/app/assets/stylesheets/masthead.css
@@ -7,6 +7,7 @@
   max-height: 600px;
   background-color: #292929;
   width: 100%;
+  position: relative;
 }
 
 .masthead-text {
